# yuno

./: Caddyfile  README.md  docker-compose.prod.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  seed_demo_workflows.py  seed_templates.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  auth.py  channels.py  chat.py  health.py  mcp.py  sessions.py  users.py  webhooks.py  workflows.py
backend/app/core/: channel_chat.py  config.py
backend/app/core/agent/: __init__.py  config.py  loop.py
backend/app/core/llm/: anthropic_provider.py  base.py  gemini_provider.py  manager.py  openai_provider.py
backend/app/core/mcp/: __init__.py  github_tools.py  notion_tools.py  registry.py
backend/app/core/tools/: __init__.py  calculator.py  datetime_tool.py  registry.py  slack_tools.py  web_search.py  workflow_tools.py
backend/app/core/workflow/: events.py  executor.py  graph_builder.py  node_runner.py  state.py  templates.py
backend/app/db/: base.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  agents.py  channels.py  conversations.py  mcp.py  sessions.py  users.py  workflows.py
backend/app/dependencies/: auth.py
backend/app/schemas/: agents.py  channels.py  conversations.py  sessions.py  users.py  workflows.py
backend/app/services/: agent_service.py  channel_connector.py  chat_service.py  execution_control.py  session_service.py  slack_service.py  telegram_service.py  workflow_service.py
backend/app/worker/: __init__.py  slack_worker.py  tasks.py
backend/tests/: test_critical_paths.py  test_graph_builder.py  test_supervisor_decision.py  test_templates.py
deploy/: setup.sh
frontend/: .env.example  (+3 more)
(+46 files in other folders)
