[tool.poetry]
name = "yuno-backend"
version = "0.1.0"
description = "Yuno Chat Backend"
authors = ["Ayaan Khan"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
anthropic = "^0.40.0"
httpx = "^0.27.0"
google-genai = "^1.0.0"
openai = "^1.0.0"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
